Updated API Endpoints

--- a/public/index.html
+++ b/public/index.html
@@ -20,39 +20,38 @@
     <!-- Card One -->
     <div class="card" style="width: 15rem;">
       <div class="card-body">
-        <h5 class="card-title">API 1</h5>
+        <h5 class="card-title">ISS API</h5>
         <p class="card-text">
-          API Description
+          API that shows the live location of the International Space Station
         </p>
-        <a href="#" class="btn btn-primary">Learn More</a>
+        <a href="/iss" class="btn btn-primary">Learn More</a>
       </div>
     </div>
 
-    &nbsp;
+    <!-- &nbsp; -->
 
-    <!-- Card two -->
-    <div class="card" style="width: 15rem;">
-      <div class="card-body">
-        <h5 class="card-title">API 2</h5>
-        <p class="card-text">
-          API Description
-        </p>
-        <a href="#" class="btn btn-primary">Learn More</a>
-      </div>
-    </div>
 
-    &nbsp;
+    <!-- <div class="card" style="width: 15rem;"> -->
+      <!-- <div class="card-body"> -->
+        <!-- <h5 class="card-title">API 2</h5> -->
+        <!-- <p class="card-text"> -->
+          <!-- API Description -->
+        <!-- </p> -->
+        <!-- <a href="#" class="btn btn-primary">Learn More</a> -->
+      <!-- </div> -->
+    <!-- </div> -->
 
-    <!-- Card three -->
-    <div class="card" style="width: 15rem;">
-      <div class="card-body">
-        <h5 class="card-title">API 3</h5>
-        <p class="card-text">
-          API Description
-        </p>
-        <a href="#" class="btn btn-primary">Learn More</a>
-      </div>
-    </div>
+    <!-- &nbsp; -->
+
+    <!-- <div class="card" style="width: 15rem;"> -->
+      <!-- <div class="card-body"> -->
+        <!-- <h5 class="card-title">API 3</h5> -->
+        <!-- <p class="card-text"> -->
+          <!-- API Description -->
+        <!-- </p> -->
+        <!-- <a href="#" class="btn btn-primary">Learn More</a> -->
+      <!-- </div> -->
+    <!-- </div> -->
 
     <script src="js/index/script.js"></script>
     <script
