--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,16 @@
   </head>
   <body>
     <!-- Card One -->
-    <div class="card" style="width: 15rem;">
+    <div class="card" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title">ISS API</h5>
         <p class="card-text">
           API that shows the live location of the International Space Station
         </p>
-        <a href="/iss" class="btn btn-primary">Learn More</a>
+        <a href="/iss-api" class="btn btn-primary">Link to the API</a>
+        <br>
+        <br>
+        <a href="/iss" class="btn btn-primary">Link to the website using the API</a>
       </div>
     </div>
 
