--- a/public/index.html
+++ b/public/index.html
@@ -25,36 +25,13 @@
           API that shows the live location of the International Space Station
         </p>
         <a href="/iss-api" class="btn btn-primary">Link to the API</a>
-        <br>
-        <br>
-        <a href="/iss" class="btn btn-primary">Link to the website using the API</a>
+        <br />
+        <br />
+        <a href="/iss" class="btn btn-primary"
+          >Link to the website using the API</a
+        >
       </div>
     </div>
-
-    <!-- &nbsp; -->
-
-
-    <!-- <div class="card" style="width: 15rem;"> -->
-      <!-- <div class="card-body"> -->
-        <!-- <h5 class="card-title">API 2</h5> -->
-        <!-- <p class="card-text"> -->
-          <!-- API Description -->
-        <!-- </p> -->
-        <!-- <a href="#" class="btn btn-primary">Learn More</a> -->
-      <!-- </div> -->
-    <!-- </div> -->
-
-    <!-- &nbsp; -->
-
-    <!-- <div class="card" style="width: 15rem;"> -->
-      <!-- <div class="card-body"> -->
-        <!-- <h5 class="card-title">API 3</h5> -->
-        <!-- <p class="card-text"> -->
-          <!-- API Description -->
-        <!-- </p> -->
-        <!-- <a href="#" class="btn btn-primary">Learn More</a> -->
-      <!-- </div> -->
-    <!-- </div> -->
 
     <script src="js/index/script.js"></script>
     <script
