Updated the UI added ISS API reference

--- a/public/index.html
+++ b/public/index.html
@@ -14,23 +14,26 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link rel="SHORTCUT ICON" href="favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <title>Michael Grigoryan - API</title>
   </head>
   <body>
     <!-- Card One -->
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 18em;">
       <div class="card-body">
         <h5 class="card-title">ISS API</h5>
         <p class="card-text">
           API that shows the live location of the International Space Station
         </p>
         <a href="/iss-api" class="btn btn-primary">Link to the API</a>
+        <br>
+        <br>
+        <a href="./html/iss-doc.html" class="btn btn-primary">Learn the API structure</a>
         <br />
         <br />
         <a href="/iss" class="btn btn-primary"
           >Link to the website using the API</a
-        >
+        >        
       </div>
     </div>
 
