Added a random number API

--- a/public/html/random-number-doc.html
+++ b/public/html/random-number-doc.html
@@ -31,15 +31,11 @@
         <pre lang="json" style="color: lightcoral; font-size: larger">
           <b>
             {
-              "details": {
-                  "timestamp": 1598372939,
-                  "iss_position": {
-                      "longitude": "160.4273",
-                      "latitude": "20.8387"
-                  },
-                  "message": "success"
-              },
-              "apiStatus": "Online"
+                "results": {
+                    "randomNum": 0.9905189159078984,
+                    "randomInt": 7
+                },
+                "apiStatus": "Online"
             }
           </b>
         </pre>
@@ -51,15 +47,11 @@
         <pre lang="json" style="color: lightcoral; font-size: larger">
           <b>
             {
-              "details": {
-                  "timestamp": UNIX_TIME_STAMP,
-                  "iss_position": {
-                      "longitude": CURRENT_LATITUDE,
-                      "latitude": CURRENT_LONGITUDE
-                  },
-                  "message": "success"
-              },
-              "apiStatus": CURRENT_API_STATUS
+                "results": {
+                    "randomNum": RANDOM_NUMBER,
+                    "randomInt": RANDOM_INTEGER
+                },
+                "apiStatus": API_STATUS
             }
           </b>
         </pre>
