--- a/public/index.html
+++ b/public/index.html
@@ -19,21 +19,44 @@
   </head>
   <body>
     <!-- Card One -->
-    <div class="card" style="width: 18em;">
+    <div class="card" style="width: 18em">
       <div class="card-body">
         <h5 class="card-title">ISS API</h5>
         <p class="card-text">
           API that shows the live location of the International Space Station
         </p>
         <a href="/iss-api" class="btn btn-primary">Link to the API</a>
-        <br>
-        <br>
-        <a href="./html/iss-doc.html" class="btn btn-primary">Learn the API structure</a>
+        <br />
+        <br />
+        <a href="./html/iss-doc.html" class="btn btn-primary"
+          >Learn the API structure</a
+        >
         <br />
         <br />
         <a href="/iss" class="btn btn-primary"
           >Link to the website using the API</a
-        >        
+        >
+      </div>
+    </div>
+
+    <!-- Card Two -->
+    <div class="card" style="width: 18em">
+      <div class="card-body">
+        <h5 class="card-title">Random Number API</h5>
+        <p class="card-text">
+          A simple API that generates a random number
+        </p>
+        <a href="/random-number-api" class="btn btn-primary">Link to the API</a>
+        <br />
+        <br />
+        <a href="./html/random-number-doc.html" class="btn btn-primary"
+          >Learn the API structure</a
+        >
+        <br />
+        <br />
+        <a href="/random-number" class="btn btn-primary"
+          >Link to the website using the API</a
+        >
       </div>
     </div>
 
