Added footer and formatted the code

--- a/public/html/iss-doc.html
+++ b/public/html/iss-doc.html
@@ -22,9 +22,11 @@
       style="padding-left: 1em; padding-top: 1em"
     >
       <h1>Using the ISS API</h1>
-      <br>
+      <br />
       <p><b>details</b> includes <u>all the data from ISS</u></p>
-      <p><b>apiStatus</b> shows <u>the status of the API</u>&nbsp;&nbsp;/iss-api</p>
+      <p>
+        <b>apiStatus</b> shows <u>the status of the API</u>&nbsp;&nbsp;/iss-api
+      </p>
       <h3>Example response</h3>
       <h6>JSON</h6>
       <code id="json-code" lang="json">
@@ -45,7 +47,7 @@
         </pre>
       </code>
       <h3>Example shown by object types</h3>
-      <br>
+      <br />
       <h6>JSON</h6>
       <code id="json-code" lang="json">
         <pre lang="json" style="color: lightcoral; font-size: larger">
@@ -64,8 +66,21 @@
           </b>
         </pre>
       </code>
-      <p>Special thanks to <a href="http://open-notify.org/Open-Notify-API/ISS-Location-Now/">Open-Notify.org</a> for providing the live location of ISS</p>
+      <p>
+        Special thanks to
+        <a href="http://open-notify.org/Open-Notify-API/ISS-Location-Now/"
+          >Open-Notify.org</a
+        >
+        for providing the live location of ISS
+      </p>
     </div>
+
+    <footer style="position: absolute; bottom: 0">
+      <p>
+        View the project hosted on
+        <a href="https://github.com/MichaelGrigoryan25/API">GitHub</a>
+      </p>
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
