--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,7 @@
     <div class="card" style="width: 18em">
       <div class="card-body">
         <h5 class="card-title">Random Number API</h5>
-        <p class="card-text">
-          A simple API that generates a random number
-        </p>
+        <p class="card-text">A simple API that generates a random number</p>
         <a href="/random-number-api" class="btn btn-primary">Link to the API</a>
         <br />
         <br />
@@ -59,6 +57,13 @@
         >
       </div>
     </div>
+
+    <footer style="position: absolute; bottom: 0">
+      <p>
+        View the project hosted on
+        <a href="https://github.com/MichaelGrigoryan25/API">GitHub</a>
+      </p>
+    </footer>
 
     <script src="js/index/script.js"></script>
     <script
