Updated UI and fixed the footer

--- a/public/html/random-number-doc.html
+++ b/public/html/random-number-doc.html
@@ -60,7 +60,16 @@
       </code>
     </div>
 
-    <footer style="position: absolute; bottom: 0">
+    <footer
+      style="
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        position: absolute;
+        bottom: inherit;
+        width: 100%;
+      "
+    >
       <p>
         View the project hosted on
         <a href="https://github.com/MichaelGrigoryan25/API">GitHub</a>
