--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- Card One -->
-    <div class="card" style="width: 18em">
+    <div class="card">
       <div class="card-body">
         <h5 class="card-title">ISS API</h5>
         <p class="card-text">
@@ -38,9 +38,9 @@
         >
       </div>
     </div>
-
+    &nbsp; &nbsp; &nbsp; &nbsp;
     <!-- Card Two -->
-    <div class="card" style="width: 18em">
+    <div class="card">
       <div class="card-body">
         <h5 class="card-title">Random Number API</h5>
         <p class="card-text">A simple API that generates a random number</p>
@@ -58,14 +58,23 @@
       </div>
     </div>
 
-    <footer style="position: absolute; bottom: 0">
+    <footer
+      style="
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        position: absolute;
+        bottom: 0;
+        margin-bottom: 5px;
+        width: 100%;
+      "
+    >
       <p>
         View the project hosted on
         <a href="https://github.com/MichaelGrigoryan25/API">GitHub</a>
       </p>
     </footer>
 
-    <script src="js/index/script.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
