--- a/public/html/random-number-doc.html
+++ b/public/html/random-number-doc.html
@@ -23,7 +23,7 @@
     >
       <h1>Using the ISS API</h1>
       <br />
-      <p><b>details</b> includes <u>all the data from ISS</u></p>
+      <p><b>results</b> includes <u>all the random number types</u></p>
       <p>
         <b>apiStatus</b> shows <u>the status of the API</u>&nbsp;&nbsp;/iss-api
       </p>
