Updated the docs

--- a/public/html/random-number-doc.html
+++ b/public/html/random-number-doc.html
@@ -27,6 +27,9 @@
       <p>
         <b>apiStatus</b> shows <u>the status of the API</u>&nbsp;&nbsp;/iss-api
       </p>
+      <p>
+        <b>API <a href="/random-number-api">Link</a></b>
+      </p>
       <h3>Example response</h3>
       <h6>JSON</h6>
       <code id="json-code" lang="json">
