--- a/public/html/iss-doc.html
+++ b/public/html/iss-doc.html
@@ -27,6 +27,9 @@
       <p>
         <b>apiStatus</b> shows <u>the status of the API</u>&nbsp;&nbsp;/iss-api
       </p>
+      <p>
+        <b>API <a href="/iss-api">Link</a></b>
+      </p>
       <h3>Example response</h3>
       <h6>JSON</h6>
       <code id="json-code" lang="json">
@@ -54,14 +57,14 @@
           <b>
             {
               "details": {
-                  "timestamp": UNIX_TIME_STAMP,
+                  "timestamp": UNIX_TIME_STAMP(Num),
                   "iss_position": {
-                      "longitude": CURRENT_LATITUDE,
-                      "latitude": CURRENT_LONGITUDE
+                      "longitude": CURRENT_LATITUDE(Num),
+                      "latitude": CURRENT_LONGITUDE(Num)
                   },
-                  "message": "success"
+                  "message": "success"(String)
               },
-              "apiStatus": CURRENT_API_STATUS
+              "apiStatus": CURRENT_API_STATUS(String)
             }
           </b>
         </pre>
