--- a/public/html/random-number-doc.html
+++ b/public/html/random-number-doc.html
@@ -1,39 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
-    <link rel="shortcut icon" href="../favicon.ico" />
-    <title>Michael Grigoryan - ISS API Doc</title>
-  </head>
-  <body>
-    <div
-      class="instructions-container"
-      style="padding-left: 1em; padding-top: 1em"
-    >
-      <h1>Using the ISS API</h1>
-      <br />
-      <p><b>results</b> includes <u>all the random number types</u></p>
-      <p>
-        <b>apiStatus</b> shows <u>the status of the API</u>&nbsp;&nbsp;/iss-api
-      </p>
-      <p>
-        <b>API <a href="/random-number-api">Link</a></b>
-      </p>
-      <h3>Example response</h3>
-      <h6>JSON</h6>
-      <code id="json-code" lang="json">
-        <pre lang="json" style="color: lightcoral; font-size: larger">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+  <link rel="shortcut icon" href="../favicon.ico" />
+  <title>Michael Grigoryan - ISS API Doc</title>
+</head>
+
+<body>
+  <div class="instructions-container" style="padding-left: 1em; padding-top: 1em">
+    <h1>Using the ISS API</h1>
+    <br />
+    <p><b>results</b> includes <u>all the random number types</u></p>
+    <p>
+      <b>apiStatus</b> shows <u>the status of the API</u>&nbsp;&nbsp;/iss-api
+    </p>
+    <p>
+      <b>API <a href="/random-number-api">Link</a></b>
+    </p>
+    <h3>Example response</h3>
+    <h6>JSON</h6>
+    <code id="json-code" lang="json">
+      <pre lang="json" style="color: lightcoral; font-size: larger">
           <b>
             {
                 "results": {
@@ -44,12 +36,12 @@
             }
           </b>
         </pre>
-      </code>
-      <h3>Example shown by object types</h3>
-      <br />
-      <h6>JSON</h6>
-      <code id="json-code" lang="json">
-        <pre lang="json" style="color: lightcoral; font-size: larger">
+    </code>
+    <h3>Example shown by object types</h3>
+    <br />
+    <h6>JSON</h6>
+    <code id="json-code" lang="json">
+      <pre lang="json" style="color: lightcoral; font-size: larger">
           <b>
             {
                 "results": {
@@ -60,23 +52,18 @@
             }
           </b>
         </pre>
-      </code>
-    </div>
+    </code>
+  </div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
+</body>
+
 </html>
