Updated the documentation

--- a/public/html/random-number-doc.html
+++ b/public/html/random-number-doc.html
@@ -45,10 +45,10 @@
           <b>
             {
                 "results": {
-                    "randomNum": RANDOM_NUMBER,
-                    "randomInt": RANDOM_INTEGER
+                    "randomNum": RANDOM_NUMBER(Num),
+                    "randomInt": RANDOM_INTEGER(Int)
                 },
-                "apiStatus": API_STATUS
+                "apiStatus": API_STATUS(Str)
             }
           </b>
         </pre>
