--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
         <a href="/iss" class="btn btn-primary"
           >Link to the website using the API</a
         >
+        <a href="https://github.com/MichaelGrigoryan25/issElectron/blob/master/build/ISSLocator.zip?raw=true" download>
+          Download the app using the API
+        </a>
       </div>
     </div>
     &nbsp; &nbsp; &nbsp; &nbsp;
