--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         <a href="/iss" class="btn btn-primary"
           >Link to the website using the API</a
         >
-        <a href="https://github.com/MichaelGrigoryan25/issElectron/blob/master/build/ISSLocator.zip?raw=true" download>
+        <a class="btn btn-primary" href="https://github.com/MichaelGrigoryan25/issElectron/blob/master/build/ISSLocator.zip?raw=true" download>
           Download the app using the API
         </a>
       </div>
