--- a/public/index.html
+++ b/public/index.html
@@ -1,80 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/index/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
-    <link rel="shortcut icon" href="favicon.ico" />
-    <title>Michael Grigoryan - API</title>
-  </head>
-  <body>
-    <!-- Card One -->
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">ISS API</h5>
-        <p class="card-text">
-          API that shows the live location of the International Space Station
-        </p>
-        <a href="/iss-api" class="btn btn-primary">Link to the API</a>
-        <br />
-        <br />
-        <a href="./html/iss-doc.html" class="btn btn-primary"
-          >Learn the API structure</a
-        >
-        <br />
-        <br />
-        <a href="/iss" class="btn btn-primary"
-          >Link to the website using the API</a
-        >
-        <a class="btn btn-primary" href="https://github.com/MichaelGrigoryan25/issElectron/blob/master/build/ISSLocator.zip?raw=true" download>
-          Download the app using the API
-        </a>
-      </div>
-    </div>
-    &nbsp; &nbsp; &nbsp; &nbsp;
-    <!-- Card Two -->
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Random Number API</h5>
-        <p class="card-text">A simple API that generates a random number</p>
-        <a href="/random-number-api" class="btn btn-primary">Link to the API</a>
-        <br />
-        <br />
-        <a href="./html/random-number-doc.html" class="btn btn-primary"
-          >Learn the API structure</a
-        >
-        <br />
-        <br />
-        <a href="/random-number" class="btn btn-primary"
-          >Link to the website using the API</a
-        >
-      </div>
-    </div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/index/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+  <link rel="shortcut icon" href="favicon.ico" />
+  <title>Michael Grigoryan - API</title>
+</head>
+
+<body>
+  <!-- Card One -->
+  <div class="card">
+    <div class="card-body">
+      <h5 class="card-title">ISS API</h5>
+      <p class="card-text">
+        API that shows the live location of the International Space Station
+      </p>
+      <a href="/iss-api" class="btn btn-primary">Link to the API</a>
+      <br />
+      <br />
+      <a href="./html/iss-doc.html" class="btn btn-primary">Learn the API structure</a>
+      <br />
+      <br />
+      <a href="/iss" class="btn btn-primary">Link to the website using the API</a>
+      <br />
+      <br />
+      <a class="btn btn-primary"
+        href="https://github.com/MichaelGrigoryan25/issElectron/blob/master/build/ISSLocator.zip?raw=true" download>
+        Download the app using the API
+      </a>
+    </div>
+  </div>
+  &nbsp; &nbsp; &nbsp; &nbsp;
+  <!-- Card Two -->
+  <div class="card">
+    <div class="card-body">
+      <h5 class="card-title">Random Number API</h5>
+      <p class="card-text">A simple API that generates a random number</p>
+      <a href="/random-number-api" class="btn btn-primary">Link to the API</a>
+      <br />
+      <br />
+      <a href="./html/random-number-doc.html" class="btn btn-primary">Learn the API structure</a>
+      <br />
+      <br />
+      <a href="/random-number" class="btn btn-primary">Link to the website using the API</a>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
